--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Typescript</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello <h2>World</h2> </h1>
     <script src="index.js"></script>
 </body>
 </html>
